--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,16 @@ header {
     background: #29BAD3;
     position: relative;
 }
-header span{
+
+header span {
     color: aliceblue;
-    font-size:30px;
+    font-size: 30px;
     margin-right: 20px;
 }
 
-.exit{
+.exit {
     position: absolute;
-    top:30px;
+    top: 30px;
     right: 25px;
 }
 
@@ -39,14 +40,57 @@ header span{
 }
 
 .post {
-    width: 50%;
-    height: 300px;
+    width: 30%;
     margin: auto;
     margin-top: 100px;
     background: #29BAD3;
     border-radius: 10px;
+    padding: 20px;
 }
 
-.post h1{
+.post h1 {
     text-align: center;
+    display: block;
+    background: #E9F8FA;
+    border-radius: 10px;
+}
+.post p {
+ background: #104A54;
+ border-radius: 10px;
+    color: aliceblue;
+    font-size: 16px;
+    padding: 10px;
+    text-align: center;
+}
+
+.writePlace {
+    width: 100%;
+    /*    height: 20%;*/
+    position: fixed;
+    bottom: 0px;
+}
+
+
+
+.writePlace--container {
+    border-radius: 10px;
+    padding: 30px;
+    width: 40%;
+    margin: auto;
+    background: #beeaf1;
+    -webkit-box-shadow: 0px 0px 26px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 26px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 26px 0px rgba(0, 0, 0, 0.75);
+}
+
+.writePlace--container h1 {
+    text-align: center;
+}
+
+.writePlace--container button {
+    text-align: center;
+    display: block;
+    width: 100px;
+    margin: auto;
+    margin-top: 20px;
 }
